# TxRadar

./: .env.example  .gitignore  Cargo.toml  README.md
.cargo/: config.toml
config/: mainnet.toml  testnet.toml
crates/txradar-agent/: Cargo.toml
crates/txradar-agent/src/: anthropic.rs  gemini.rs  lib.rs
crates/txradar-core/: Cargo.toml
crates/txradar-core/src/: blockhash.rs  bundle.rs  helius.rs  jito.rs  lib.rs  rpc.rs  tracker.rs
crates/txradar-log/: Cargo.toml
crates/txradar-log/src/: lib.rs
crates/txradar-stream/: Cargo.toml
crates/txradar-stream/src/: client.rs  lib.rs
crates/txradar-tips/: Cargo.toml
crates/txradar-tips/src/: lib.rs
crates/txradar-tui/: Cargo.toml
crates/txradar-tui/src/: lib.rs
crates/txradar-types/: Cargo.toml
crates/txradar-types/src/: config.rs  failure.rs  lib.rs  lifecycle.rs  record.rs
docs/: ARCHITECTURE.md  README-answers.md
logs/curated/: README.md  lifecycle-mainnet-2026-06-20.jsonl  lifecycle-mainnet-2026-06-20.md
