[package]
name = "txradar-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
txradar-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
# Uncommented in Phase 2:
# solana-sdk = { workspace = true }
# solana-client = { workspace = true }
# bincode = { workspace = true }
# base64 = { workspace = true }
# bs58 = { workspace = true }
