[package]
name = "txradar-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
txradar-types = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
# Phase 2: transaction signing, bundle construction, encoding.
solana-sdk = { workspace = true }
bincode = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
rand = { workspace = true }
