[package]
name = "txradar-log"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
txradar-types = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
