[package]
name = "txradar-stream"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
txradar-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
# Uncommented in Phase 1 once endpoints/auth are available:
# yellowstone-grpc-client = { workspace = true }
# yellowstone-grpc-proto = { workspace = true }
# tonic = { workspace = true }
