[package]
name = "txradar-stream"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
txradar-types = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
# Phase 1: live Yellowstone/Geyser gRPC streaming.
yellowstone-grpc-client = { workspace = true }
yellowstone-grpc-proto = { workspace = true }
tonic = { workspace = true }
